<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/download5"
    android:layout_height="match_parent"
    tools:context=".update">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="278dp"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/viewemp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="289dp"
        android:layout_height="340dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/empid"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Enter Employee ID"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/empname"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:ems="10"
            android:hint="Enter Full Name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:textColor="#050505"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/empnumber"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:ems="10"
            android:hint="@string/enterphone"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department"

            android:textColor="#040404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/empdepartment"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/enterdep"
            android:inputType="textPersonName" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="82dp"
        android:layout_marginBottom="76dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="104dp"
            android:layout_height="64dp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:background="#073347"
            android:onClick="btnadd"
            android:text="@string/updatebtn"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="104dp"
            android:layout_height="64dp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:background="#073347"
            android:text="@string/deletebtn"

            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="104dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="#073347"
            android:text="@string/btnhome"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>