<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download5"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="TextView"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="78dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_marginTop="16dp"
        android:text="@string/hello"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="269dp"
        android:layout_height="473dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:alignmentMode="alignMargins"
        android:background="#FFFFFF"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.782">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#D1E2EF"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="127dp"
                android:layout_height="122dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/download6" />

            <Button
                android:id="@+id/button4"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="#073347"
                android:fontFamily="sans-serif-black"
                android:text="@string/add_employee"
                android:textColor="#F8F8F8"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="#D1E2EF"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="168dp"
                android:layout_height="131dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/download11" />

            <Button
                android:id="@+id/button5"
                android:layout_width="219dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="#073347"
                android:fontFamily="sans-serif-black"
                android:text="@string/home"
                android:textColor="#F8F8F8"
                android:textSize="17sp" />

        </LinearLayout>


    </GridLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/des"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.486" />


</androidx.constraintlayout.widget.ConstraintLayout>